--- a/kancmatket_html/backet.html
+++ b/kancmatket_html/backet.html
@@ -34,8 +34,8 @@
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
     <span class="no_authorize">Продолжить без авторизации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="" style="margin-top: 10px;">
-            <span>Авторизороваться</span>
+    <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
+             <span>Войти</span>
         </a>
   </div>
   <div id="menu1" class="tab-pane fade register">
@@ -45,7 +45,7 @@
       <input type="text" placeholder="Введите Ваш Email">
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="" style="margin-top: 10px;">
+    <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
             <span>Зарегистрироваться</span>
         </a>
   </div>
@@ -124,7 +124,7 @@
   
   <div class="order_list_total">
         <div class="order_list_total_item">Итого:<span class="order_list_total_value">480<span>грн</span></span></div>
-        <a href="" class="edit_order">Редактировать заказ</a>
+        <a href="backet.html" class="edit_order">В корзину</a>
       </div>
         </div>
             </div>
@@ -135,18 +135,17 @@
 <div class="sub_nav clearfix">
   <div class="wrapper">
     <ul class="sub_nav_container">
-      <li class="col-md-4 col-xs-12 dropdown_btn"><a class="sub_nav_link" href="">Товары для школы</a>
+      <li class="col-md-4 col-xs-12 dropdown_btn">Товары для школы
           <ul class="dropdown-menu">
-            <li><a href="catalogue.html">Альбомы и тетради</a></li>
-            <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
-            <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
-             <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-          </ul>
-      </li>
-      <li class="col-md-4 col-xs-12 dropdown_btn" ><a class="sub_nav_link" href="">Товары для офиса</a>
-      <ul class="dropdown-menu">
-            <li><a href="#">Альбомы и тетради</a></li>
-            <li class="third_level dropdown_btn_third"><a href="#">Рюкзаки и пеналы</a>
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -155,21 +154,92 @@
                 </ul>
           </li>
             </li>
-            <li><a class="third_level dropdown_btn_third" href="#">Канцелярские принадлежности</a>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li><a href="#">Папки, файлы и архивы</a></li>
-          </ul></li>
-      <li class="col-md-4 col-xs-12 dropdown_btn"><a class="sub_nav_link" href="">Товары для творчества</a>
+             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
+          </ul>
+      </li>
+      <li class="col-md-4 col-xs-12 dropdown_btn" >Товары для офиса
       <ul class="dropdown-menu">
-            <li><a href="catalogue.html">Альбомы и тетради</a></li>
-            <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
-            <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
-             <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
+          </ul></li>
+      <li class="col-md-4 col-xs-12 dropdown_btn creator">Товары для творчества
+       <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
           </ul></li>
     </ul>
   </div>
@@ -284,7 +354,7 @@
     </div>
   </div>
       
-  <div style="text-align: center;"><a href="" class="checkout">Оформить заказ</a></div>
+  <div style="text-align: center;"><a href="order_authorization.html" class="checkout">Оформить заказ</a></div>
 
 </div>
       
