--- a/kancmatket_html/card.html
+++ b/kancmatket_html/card.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" type="text/css" href="css/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+  <script   src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"   integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="   crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar">
@@ -40,7 +41,7 @@
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
     <span class="no_authorize">Продолжить без авторизации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="" style="margin-top: 10px;">
+    <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
             <span>Авторизороваться</span>
         </a>
   </div>
@@ -51,8 +52,8 @@
       <input type="text" placeholder="Введите Ваш Email">
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
-    <a class="product_buy_btn product_buy_btn_card" href="" style="margin-top: 10px;">
-            <span>Зарегистрироваться</span>
+    <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
+             <span>Войти</span>
         </a>
   </div>
           
@@ -130,7 +131,7 @@
   
   <div class="order_list_total">
         <div class="order_list_total_item">Итого:<span class="order_list_total_value">480<span>грн</span></span></div>
-        <a href="" class="edit_order">Редактировать заказ</a>
+        <a href="backet.html" class="edit_order">В корзину</a>
       </div>
         </div>
             </div>
@@ -141,18 +142,17 @@
 <div class="sub_nav clearfix">
   <div class="wrapper">
     <ul class="sub_nav_container">
-      <li class="col-md-4 col-xs-12 dropdown_btn"><a class="sub_nav_link" href="">Товары для школы</a>
+      <li class="col-md-4 col-xs-12 dropdown_btn">Товары для школы
           <ul class="dropdown-menu">
-            <li><a href="catalogue.html">Альбомы и тетради</a></li>
-            <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
-            <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
-             <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
-          </ul>
-      </li>
-      <li class="col-md-4 col-xs-12 dropdown_btn" ><a class="sub_nav_link" href="">Товары для офиса</a>
-      <ul class="dropdown-menu">
-            <li><a href="#">Альбомы и тетради</a></li>
-            <li class="third_level dropdown_btn_third"><a href="#">Рюкзаки и пеналы</a>
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
                 <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
@@ -161,21 +161,92 @@
                 </ul>
           </li>
             </li>
-            <li><a class="third_level dropdown_btn_third" href="#">Канцелярские принадлежности</a>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
              <ul class="dropdown-menu_third">
                   <li><a href="catalogue.html">Альбомы и тетради</a></li>
                   <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
                   <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
                    <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
                 </ul></li>
-             <li><a href="#">Папки, файлы и архивы</a></li>
-          </ul></li>
-      <li class="col-md-4 col-xs-12 dropdown_btn"><a class="sub_nav_link" href="">Товары для творчества</a>
+             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
+          </ul>
+      </li>
+      <li class="col-md-4 col-xs-12 dropdown_btn" >Товары для офиса
       <ul class="dropdown-menu">
-            <li><a href="catalogue.html">Альбомы и тетради</a></li>
-            <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
-            <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
-             <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
+          </ul></li>
+      <li class="col-md-4 col-xs-12 dropdown_btn creator">Товары для творчества
+       <ul class="dropdown-menu">
+           <li class="third_level dropdown_btn_third"><a href="catalogue.html">Альбомы и тетради</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            <li class="third_level dropdown_btn_third"><a href="catalogue.html">Рюкзаки и пеналы</a>
+                <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul>
+          </li>
+            </li>
+            <li class="third_level dropdown_btn_third">Канцелярские принадлежности
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             <li class="third_level dropdown_btn_third">Папки, файлы и архивы
+             <ul class="dropdown-menu_third">
+                  <li><a href="catalogue.html">Альбомы и тетради</a></li>
+                  <li><a href="catalogue.html">Рюкзаки и пеналы</a></li>
+                  <li><a href="catalogue.html">Канцелярские принадлежности</a></li>
+                   <li><a href="catalogue.html">Папки, файлы и архивы</a></li>
+                </ul></li>
+             </li>
           </ul></li>
     </ul>
   </div>
@@ -413,6 +484,12 @@ incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
   <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
 <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
 <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+<script type="text/javascript" src="fancybox/source/jquery.fancybox.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
+<script type="text/javascript">
+ //   $(document).ready(function() {
+ // $(".slideshow__item").fancybox();
+ //   });
+</script>
 </body>
 </html>
