--- a/kancmatket_html/order_authorization.html
+++ b/kancmatket_html/order_authorization.html
@@ -265,9 +265,9 @@
       <input type="text" placeholder="Введите Ваш логин"></br>
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
-    <span class="no_authorize">Продолжить без авторизации</span>
+    <span class="no_authorize">Забыли пароль?</span>
     <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="float: right; padding: 10px;">
-            <span>Авторизороваться</span>
+            <span>Войти</span>
         </a>
   </div>
   <div id="register" class="tab-pane fade register">
@@ -276,7 +276,7 @@
       <input type="text" placeholder="Введите Ваш телефон"></br>
       <input type="text" placeholder="Введите Ваш Email">
       </form>
-      <span class="no_authorize">Продолжить без регистрации</span>
+      <!-- <span class="no_authorize">Продолжить без регистрации</span> -->
     <a class="product_buy_btn product_buy_btn_card" href="" style="float: right; padding: 10px;">
             <span>Зарегистрироваться</span>
         </a>
@@ -288,7 +288,7 @@
   <span>Способ доставки</span>
   <ul class="order_details_delivery_tabs clearfix">
   <li class="active"><a data-toggle="tab" href="#delivery1" class="order_details_delivery_tab">Самовывоз</a></li>
-  <li class="noactive"><a data-toggle="tab" href="#delivery2" class="order_details_delivery_tab">Новая Почта</a></li>
+  <li class=""><a data-toggle="tab" href="#delivery2" class="order_details_delivery_tab">Новая Почта</a></li>
 </ul>
 
 <div class="tab-content">
