--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -67,7 +67,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li> <a data-scroll="" href="about.html">О нас</a> </li>
         <li> <a data-scroll="" href="news_main.html">Новости</a> </li>
-        <li> <a data-scroll="" href="loyalty.html">Акции</a> </li>
+        <li> <a data-scroll="" href="catalogue.html">Акции</a> </li>
         <li> <a data-scroll="" href="catalogue.html">Новинки</a> </li>
         <li> <a data-scroll="" href="shipping_and_payment.html">Доставка и оплата</a> </li>
         <li> <a data-scroll="" href="loyalty.html">Программа лояльности</a> </li>
@@ -325,6 +325,8 @@
            <label>Введите пароль</label><br><input type="text" placeholder=""><br>
             <label>Повторите пароль</label><br><input type="text" placeholder=""><br>
           </form>
+           <div class="save"><a href="">Сохранить</a></div>
+         <div class="edit_history"><a href="">Редактировать</a></div>
         </div>
         <div class="tabs_item animated">
             <table class="table">
@@ -358,8 +360,6 @@
           </tbody>
         </table>
         </div>
-        <div class="save"><a href="">Сохранить</a></div>
-         <div class="edit_history"><a href="">Редактировать</a></div>
       </div>
     </div>
     </div>
@@ -382,7 +382,7 @@
        <ul class="footer_contacts_list">
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="about.html">О нас</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="news_main.html">Новости</a></li>
-        <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="loyalty.html">Акции</a></li>
+        <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="catalogue.html">Акции</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="catalogue.html">Новинки</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="shipping_and_payment.html">Доставка и оплата</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="loyalty.html">Программа лояльности</a></li>
