--- a/kancmatket_html/card.html
+++ b/kancmatket_html/card.html
@@ -42,7 +42,7 @@
     </form>
     <span class="no_authorize">Продолжить без авторизации</span>
     <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
-            <span>Авторизороваться</span>
+            <span>Войти</span>
         </a>
   </div>
   <div id="menu1" class="tab-pane fade register">
@@ -53,7 +53,7 @@
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
     <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
-             <span>Войти</span>
+             <span>Зарегистрироваться</span>
         </a>
   </div>
           
@@ -73,7 +73,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li> <a data-scroll="" href="about.html">О нас</a> </li>
         <li> <a data-scroll="" href="news_main.html">Новости</a> </li>
-        <li> <a data-scroll="" href="loyalty.html">Акции</a> </li>
+        <li> <a data-scroll="" href="catalogue.html">Акции</a> </li>
         <li> <a data-scroll="" href="catalogue.html">Новинки</a> </li>
         <li> <a data-scroll="" href="shipping_and_payment.html">Доставка и оплата</a> </li>
         <li> <a data-scroll="" href="loyalty.html">Программа лояльности</a> </li>
@@ -314,9 +314,24 @@ consectetur adipisicing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
         </div>
         <div id="character" class="tab-pane fade">
-           <p class="products_details_text"><span>Lorem ipsum dolor sit amet,</span>
-consectetur adipisicing elit, sed do eiusmod tempor 
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+           <div class="products_details_text">
+           <table class="table">
+          <tbody>
+            <tr>
+              <th scope="row">20.10.16</th>
+              <td>№#####</td>
+            </tr>
+            <tr>
+               <th scope="row">20.10.16</th>
+              <td>№#####</td>
+            </tr>
+            <tr>
+               <th scope="row">20.10.16</th>
+              <td>№#####</td>
+            </tr>
+          </tbody>
+        </table>
+        </div>
         </div>
         <div id="menu2" class="tab-pane fade">
            <p class="products_details_text"><span>Lorem ipsum dolor sit amet,</span>
@@ -454,7 +469,7 @@ incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostr
      <ul class="footer_contacts_list">
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="about.html">О нас</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="news_main.html">Новости</a></li>
-        <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="loyalty.html">Акции</a></li>
+        <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="catalogue.html">Акции</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="catalogue.html">Новинки</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="shipping_and_payment.html">Доставка и оплата</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="loyalty.html">Программа лояльности</a></li>
