--- a/kancmatket_html/catalogue.html
+++ b/kancmatket_html/catalogue.html
@@ -37,7 +37,7 @@
     </form>
     <span class="no_authorize">Продолжить без авторизации</span>
     <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
-            <span>Авторизороваться</span>
+            <span>Войти</span>
         </a>
   </div>
   <div id="menu1" class="tab-pane fade register">
@@ -48,7 +48,7 @@
       </form>
       <span class="no_authorize">Продолжить без регистрации</span>
     <a class="product_buy_btn product_buy_btn_card" href="order_authorization.html" style="margin-top: 10px;">
-             <span>Войти</span>
+             <span>Зарегистрироваться</span>
         </a>
   </div>
           
@@ -68,7 +68,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li> <a data-scroll="" href="about.html">О нас</a> </li>
         <li> <a data-scroll="" href="news_main.html">Новости</a> </li>
-        <li> <a data-scroll="" href="loyalty.html">Акции</a> </li>
+        <li> <a data-scroll="" href="catalogue.html">Акции</a> </li>
         <li> <a data-scroll="" href="catalogue.html">Новинки</a> </li>
         <li> <a data-scroll="" href="shipping_and_payment.html">Доставка и оплата</a> </li>
         <li> <a data-scroll="" href="loyalty.html">Программа лояльности</a> </li>
@@ -621,7 +621,7 @@
       <ul class="footer_contacts_list">
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="about.html">О нас</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="news_main.html">Новости</a></li>
-        <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="loyalty.html">Акции</a></li>
+        <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="catalogue.html">Акции</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="catalogue.html">Новинки</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="shipping_and_payment.html">Доставка и оплата</a></li>
         <li class="footer_contacts_list_item"><a class="footer_contacts_list_link" href="loyalty.html">Программа лояльности</a></li>
@@ -641,7 +641,15 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2679.3546219246104!2d35.187612!3d47.813345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66a9d85c1a88419a!2z0JrQsNC90YYt0JzQsNGA0LrQtdGCINCa0LDQvdGG0LXQu9GP0YDQuNGP!5e0!3m2!1sru!2s!4v1404753315740" width="100%" height="370" frameborder="0"  frameborder="0" style="border:0"></iframe></div>
   </div>
 </footer>
-
+<div class="pop_up add_to_bucket">
+  <div id="modal_form">
+      <span id="modal_close"><i class="fa fa-times" aria-hidden="true"></i></span> 
+      <h3> Товар добавлен в корзину</h3>
+      <img src="img/checkmark.png" width="20%" style="margin: 10px 0;">
+      <a href="backet.html" class="edit_order" style="margin: 20px auto;">В корзину</a>
+</div>
+<div id="overlay"></div>
+</div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
