--- a/kancmatket_html/index.html
+++ b/kancmatket_html/index.html
@@ -780,7 +780,15 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2679.3546219246104!2d35.187612!3d47.813345!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x66a9d85c1a88419a!2z0JrQsNC90YYt0JzQsNGA0LrQtdGCINCa0LDQvdGG0LXQu9GP0YDQuNGP!5e0!3m2!1sru!2s!4v1404753315740" width="100%" height="370" frameborder="0"  frameborder="0" style="border:0"></iframe></div>
   </div>
 </footer>
-
+<div class="pop_up add_to_bucket">
+  <div id="modal_form">
+      <span id="modal_close"><i class="fa fa-times" aria-hidden="true"></i></span> 
+      <h3> Товар добавлен в корзину</h3>
+      <img src="img/checkmark.png" width="20%" style="margin: 10px 0;">
+      <a href="backet.html" class="edit_order" style="margin: 20px auto;">В корзину</a>
+</div>
+<div id="overlay"></div>
+</div>
 <div id="stop" class="scrollTop">
         <span><a href=""><i class="fa fa-angle-up" aria-hidden="true"></i></a></span>
       </div>
