--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -265,9 +265,9 @@
       <div class="tabs_list clearfix">
         <div class="tabs_item active animated">
           <form>
-            <label>Введите Ваше имя</label><br><input type="text" placeholder=""><br>
-            <label>Введите Ваш email</label><br><input type="text" placeholder=""><br>
-            <label>Введите Ваш телефон</label><br><input type="text" placeholder=""><br>
+            <label>Введите Ваше имя</label><br><input type="text" placeholder="" disabled=""><br>
+            <label>Введите Ваш email</label><br><input type="text" placeholder="" disabled=""><br>
+            <label>Введите Ваш телефон</label><br><input type="text" placeholder="" disabled=""><br>
             <div style="height: 1px; border-bottom: 1px dashed #aaa; margin-bottom: 20px;margin-top: 20px;"></div>
             <!-- Day dropdown -->
             <label style="margin-bottom: 10px;">Введите дату Вашего рождения</label><br>
