--- a/kancmatket_html/contact_history.html
+++ b/kancmatket_html/contact_history.html
@@ -34,7 +34,7 @@
       <input type="text" placeholder="Введите Ваш логин"></br>
       <input type="text" placeholder="Введите Ваш пароль">
     </form>
-    <span class="no_authorize">Продолжить без авторизации</span>
+    <span class="no_authorize">Забыли пароль?</span>
     <a class="product_buy_btn product_buy_btn_card" href="contact_history.html" style="margin-top: 10px;">
              <span>Войти</span>
         </a>
